--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     healthCheckPath: /api/health
     autoDeploy: true
 
-  - type: static
+  - type: static_site
     name: skylens-frontend
     rootDir: Frontend
     buildCommand: npm ci && npm run build
@@ -23,4 +23,3 @@ services:
       - type: rewrite
         source: "/*"
         destination: "/index.html"
-
