--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     env: static
     rootDir: Frontend
     buildCommand: npm ci && npm run build
-    publishPath: dist
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_BASE
         fromService:
